trying to fix IE box shadow spacing issue. making the outline thicker and pulling it down a little

--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -1002,9 +1002,10 @@ content: "";
 
 			.field--type-image:after {
 				box-shadow: inset 0 0 0 10px $yellow;
-				outline: 1px solid $yellow;
-    			margin-left: 1px;
-    			width: calc(100% - 2px);
+				outline: 2px solid $yellow;
+    			margin-left: 2px;
+    			width: calc(100% - 4px);
+    			margin-bottom: 2px;
 			}
 		}
 
@@ -1017,9 +1018,10 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $terra_cotta;
-					outline: 1px solid $terra_cotta;
-    				margin-left: 1px;
-    				width: calc(100% - 2px);
+					outline: 2px solid $terra_cotta;
+    				margin-left: 2px;
+    				width: calc(100% - 4px);
+    				margin-bottom: 2px;
 				}
 			}
 		}
